# MediaSDK-VPU

./: AllBuild.sln  CMakeLists.txt  README.md
_studio/: CMakeLists.txt
_studio/mfx_lib/: CMakeLists.txt  libmfx-onevpl.def  libmfxhw-onevpl.map
_studio/mfx_lib/cmrt_cross_platform/include/: cmrt_cross_platform.h
_studio/mfx_lib/cmrt_cross_platform/src/: cmrt_cross_platform.cpp
_studio/mfx_lib/decode/h264/src/: mfx_h264_dec_decode.cpp
_studio/mfx_lib/decode/h265/src/: mfx_h265_dec_decode.cpp
_studio/mfx_lib/decode/mjpeg/include/: mfx_mjpeg_dec_decode.h
_studio/mfx_lib/decode/mjpeg/src/: mfx_mjpeg_dec_decode.cpp
_studio/mfx_lib/decode/mpeg2/src/: mfx_mpeg2_decode.cpp
_studio/mfx_lib/decode/vc1/src/: mfx_vc1_decode.cpp
_studio/mfx_lib/decode/vp8/src/: mfx_vp8_dec_decode_hw.cpp
_studio/mfx_lib/decode/vp9/src/: mfx_vp9_dec_decode_hw.cpp
_studio/mfx_lib/encode/mjpeg/include/: mfx_mjpeg_encode.h
_studio/mfx_lib/encode_hw/: CMakeLists.txt
_studio/mfx_lib/encode_hw/h264/include/: mfx_h264_encode_hw_utils.h
_studio/mfx_lib/encode_hw/h264/src/: mfx_h264_encode_hw.cpp  mfx_h264_encode_hw_utils.cpp  mfx_h264_encode_hw_utils_new.cpp
_studio/mfx_lib/encode_hw/h265/include/: mfx_h265_encode_hw_brc.h  mfx_h265_encode_hw_ddi.h  mfx_h265_encode_hw_utils.h  mfx_h265_encode_vaapi.h
_studio/mfx_lib/encode_hw/h265/src/: mfx_h265_encode_hw.cpp  mfx_h265_encode_hw_brc.cpp  mfx_h265_encode_hw_par.cpp  mfx_h265_encode_hw_utils.cpp  mfx_h265_encode_vaapi.cpp
_studio/mfx_lib/encode_hw/hevc/: hevcehw_disp.cpp
_studio/mfx_lib/encode_hw/hevc/agnostic/: hevcehw_base.h  hevcehw_block_queues.h  hevcehw_ddi.h  hevcehw_utils.h
_studio/mfx_lib/encode_hw/hevc/agnostic/base/: hevcehw_base_data.h  hevcehw_base_ext_brc.cpp  hevcehw_base_ext_brc.h  hevcehw_base_iddi_packer.h  hevcehw_base_impl.cpp  hevcehw_base_interlace.cpp  hevcehw_base_legacy.cpp  hevcehw_base_legacy_defaults.cpp  hevcehw_base_task.cpp  hevcehw_base_task.h
_studio/mfx_lib/encode_hw/hevc/agnostic/g12/: hevcehw_g12_caps.h  hevcehw_g12_data.h
_studio/mfx_lib/encode_hw/hevc/agnostic/kmb/: hevcehw_kmb.cpp  hevcehw_kmb.h  hevcehw_kmb_caps.cpp  hevcehw_kmb_caps.h  hevcehw_kmb_hdr_ro.cpp  hevcehw_kmb_hdr_ro.h  hevcehw_kmb_ipcm.cpp  hevcehw_kmb_ipcm.h  hevcehw_kmb_roi.cpp  hevcehw_kmb_roi.h  hevcehw_kmb_roi_map.cpp  hevcehw_kmb_roi_map.h
_studio/mfx_lib/encode_hw/hevc/linux/base/: hevcehw_base_fei_lin.cpp  hevcehw_base_fei_lin.h  hevcehw_base_lin.cpp  hevcehw_base_va_lin.cpp  hevcehw_base_va_lin.h  hevcehw_base_va_packer_lin.cpp  hevcehw_base_va_packer_lin.h
_studio/mfx_lib/encode_hw/mjpeg/include/: mfx_mjpeg_encode_hw.h  mfx_mjpeg_encode_hw_utils.h  mfx_mjpeg_encode_vaapi.h
_studio/mfx_lib/encode_hw/mjpeg/src/: mfx_mjpeg_encode_hw.cpp  mfx_mjpeg_encode_hw_utils.cpp  mfx_mjpeg_encode_vaapi.cpp
_studio/mfx_lib/encode_hw/mpeg2/src/: mfx_mpeg2_encode_utils_hw.cpp
_studio/mfx_lib/encode_hw/shared/: ehw_device_vaapi.cpp  ehw_device_vaapi.h  ehw_task_manager.cpp  ehw_task_manager.h
_studio/mfx_lib/encode_hw/vp9/include/: mfx_vp9_encode_hw_utils.h
_studio/mfx_lib/encode_hw/vp9/src/: mfx_vp9_encode_hw.cpp  mfx_vp9_encode_hw_par.cpp  mfx_vp9_encode_hw_utils.cpp
_studio/mfx_lib/plugin/: CMakeLists.txt
_studio/mfx_lib/plugin/include/: mfx_hevc_dec_plugin.h
_studio/mfx_lib/plugin/src/: mfx_unified_dec_plugin.cpp
_studio/mfx_lib/scheduler/src/: mfx_scheduler_core.cpp
_studio/mfx_lib/shared/include/: mfx_common_int.h  mfx_enc_common.h  mfx_h264_enc_common_hw.h  mfx_h264_encode_struct_vaapi.h  mfx_h264_encode_vaapi.h  mfx_platform_headers.h  mfx_session.h  mfx_task.h  mfx_thread_task.h
_studio/mfx_lib/shared/src/: libmfxsw.cpp  libmfxsw_decode.cpp  libmfxsw_enc.cpp  libmfxsw_encode.cpp  libmfxsw_session.cpp  libmfxsw_vpl.cpp  libmfxsw_vpp.cpp  mfx_common_int.cpp  mfx_enc_common.cpp  mfx_h264_enc_common_hw.cpp  mfx_h264_encode_vaapi.cpp  mfx_h264_fei_vaapi.cpp  mfx_session.cpp  mfx_vc1_dec_common.cpp  mfx_vpx_dec_common.cpp
_studio/mfx_lib/vpp/src/: mfx_vpp_hw.cpp  mfx_vpp_utils.cpp
_studio/shared/asc/include/: asc.h  asc_avx2_impl.h  asc_c_impl.h  asc_common_impl.h  asc_cpu_dispatcher.h  asc_defs.h  asc_sse4_impl.h  asc_structures.h  cpu_detect.h  iofunctions.h  motion_estimation_engine.h  tree.h
_studio/shared/asc/src/: asc.cpp  asc_avx2_impl.cpp  asc_c_impl.cpp  asc_sse4_impl.cpp  iofunctions.cpp  motion_estimation_engine.cpp  tree.cpp
_studio/shared/include/: libmfx_allocator.h  libmfx_allocator_hddl.h  libmfx_core.h  libmfx_core_hddl.h  libmfx_core_vaapi.h  mfx_common.h  mfx_config.h  mfx_enc_ctrl_wrapper.h  mfx_trace.h  mfx_umc_alloc_wrapper.h  mfx_utils.h  mfxaudio++int.h  mfxstructures-int.h  mfxvideo++int.h  vaapi_ext_interface.h
_studio/shared/mfx_trace/include/: mfx_trace_ftrace.h  mfx_trace_itt.h  mfx_trace_stat.h  mfx_trace_textlog.h  mfx_trace_utils.h
_studio/shared/mfx_trace/include/sys/: mfx_trace_utils_linux.h  mfx_trace_utils_windows.h
_studio/shared/mfx_trace/src/: mfx_trace.cpp  mfx_trace_itt.cpp  mfx_trace_stat.cpp  mfx_trace_textlog.cpp  mfx_trace_utils.cpp  mfx_trace_utils_linux.cpp  mfx_trace_utils_windows.cpp
_studio/shared/src/: fast_copy.cpp  libmfx_allocator_hddl.cpp  libmfx_allocator_vaapi.cpp  libmfx_core.cpp  libmfx_core_factory.cpp  libmfx_core_hddl.cpp  libmfx_core_vaapi.cpp  mfx_static_assert_structs.cpp  mfx_umc_alloc_wrapper.cpp  mfx_umc_mjpeg_vpp_sw.cpp
api/mfx_dispatch/windows/: CMakeLists.txt  libmfx_uwp.vcxproj  libmfx_vs2015.vcxproj
api/mfx_dispatch/windows/src/: mfx_library_iterator.cpp
doc/: LICENSE.rtf  (+7 more)
libva/: CMakeLists.txt  CMakeLists.txt.in
libva/libva-kmb/: libva-kmb.def
libva/va/: va.c  va.h  va_backend.h  va_fool.c  va_impl.cpp  va_tpi.h  va_trace.c  va_version.h
libva/va/drm/: va_drm.h  va_drm_utils.c
msdk_bypass/: CMakeLists.txt  msdk_bypass.def
msdk_bypass/common/: comm_helper.cpp  comm_helper.h  hddl_mfx_common.cpp  hddl_mfx_common.h
msdk_bypass/host/: host_mfx_shim.cpp
oneVPL/dispatcher/: CMakeLists.txt
oneVPL/dispatcher/linux/: mfxloader.cpp
oneVPL/dispatcher/windows/: mfx_dispatcher.cpp  mfx_library_iterator.cpp
(+158 files in other folders)
